[package]
name = "ping_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
futures-util = "0.3.17"
tokio-util = { version = "0.6", features = ["full"] }
futures = "0.3.17"
clap = "2.33.3"
trackable = "1.2.0"
slog = {version = "2", features = ["release_max_level_debug"]}
sloggers = "2"
netdiag = "0.2.1"